# KUCI

./: README.md  pyproject.toml
my_package/: utils.py
my_package/module/dataset/: amlm.py  bjwsc.py  custom_dataset.py  jcqa.py  kuci.py  kwdlc.py  sjwsc.py
my_package/module/ensembler/: base.py  kuci.py  kwdlc.py
my_package/module/model/: multiple_choice.py  sequence_classification.py  sequence_regression.py  sjwsc.py
my_package/module/tester/: base.py  bjwsc.py  jcqa.py  kuci.py  kwdlc.py
my_package/module/trainer/: amlm.py  base.py  bjwsc.py  jcqa.py  kuci.py  kwdlc.py  sjwsc.py
script/a_acquire_core_events/: README.md  acquire_core_events.py  config_template.json  convert_xml_to_json.py
script/a_acquire_core_events/test/: case_frame_dict.json  expected_core_events.txt
script/b_extract_event_pairs/: README.md  create_blacklist.py  extract_event_pairs.py  filter_by_conditions.py  post_process.py
script/b_extract_event_pairs/makefile/: event_pair2filtered.mk  knp2event_pair.mk
script/b_extract_event_pairs/snippet/: aggregate_counts.py  append_negation_suffix.py  extract_reliable_contingent_event_pair.py  split_into_or_merge_data_frames.py
script/cd_integrate_specs/: README.md  assign_worker_ids_to_cbeps.py  assign_worker_ids_to_table.py  integrate_canonical_form.py  rename_columns.py
script/d_generate_problems/: README.md  build_dataset.py  config_template.json  generate_problems.py  reduce_data_leakage.py  select_candidates.py
script/e_experiment/: README.md  ensemble.py  run_cross_validation.sh  test.py  train.py
(+71 files in other folders)
