[tool.poetry]
name = "kuci"
version = "0.1.0"
description = "Python Virtual Environment for building KUCI (pseudo-problems)"
authors = ["Kazumasa Omura <omura@nlp.ist.i.kyoto-u.ac.jp>"]

[tool.poetry.dependencies]
python = "3.9.10"
gensim = "3.8.3"
ordered-set = "4.1.0"
pandas = "1.3.5"
pyknp = "0.6.1"
pyknp_eventgraph = {git = "https://github.com/omukazu/pyknp-eventgraph.git", rev = "main"} 
rhoknp = "^0.3.1"
sklearn = "0.0"
torch = "1.10.2"
transformers = "4.15.0"
sentencepiece = "^0.1.96"
protobuf = "~=3.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
